# ColibriClient

./: .gitignore  CMakeLists.txt  CommandDispatcher.h  Drone.h  InputEvent.h  InputManager.h  Listener.h  build.sh  main.cpp  readme.md  screen.h
include/: CommandDispatcher.h  Drone.h
include/Communication/: Communication.h
include/Controller/: CommandDispatcher.h  Controller.h  InputManager.h
include/Logging/: Logging.h
include/Model/: CommandSerializer.h  Drone.h  Model.h
include/View/: Screen.h  ScreenId.h  ScreenManager.h  View.h  ViewMediator.h
include/View/Commands/: ViewCommands.h
include/View/Input/: InputEvent.h  InputManager.h  InputMap.h  Listener.h
include/View/UI/: DroneScreen.h  MenuScreen.h  OptionScreen.h
include/View/Widgets/: MenuTile.h  TextLabel.h  Widgets.h
include/ViewModel/: ViewModel.h
src/: CommandDispatcher.cpp  Drone.cpp  main.cpp
src/Communication/: Communication.cpp
src/Controller/: Controller.cpp
src/Model/: CommandSerializer.cpp  Drone.cpp  Model.cpp
src/View/: Screen.cpp  ScreenManager.cpp  View.cpp  ViewMediator.cpp
src/View/Widgets/: MenuTile.cpp  TextLabel.cpp  Widgets.cpp
